<resources>
    <string name="app_name">PublicTransitRouting</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="token_rejected_message">The token you provided was rejected. Make sure you provide the correct value, or if you don\'t have a token, check the magiclane.com website, sign up or sign in and generate one. Then input it in the AndroidManifest.xml file.</string>
    <string name="internet_required">This app requires Internet connection. Please connect to the Internet.</string>
    <string name="sdk_initialization_failed">SDK initialization failed: %1$s</string>
    <string name="routing_cancelled">The routing action was cancelled.</string>
    <string name="routing_error">Routing service error: %1$s</string>
    <string name="routing_failed_to_start">Could not start route calculation: %1$s</string>

    <!-- Map buttons -->
    <string name="routes">Routes</string>
    <string name="route_description">Route description</string>
    <string name="settings">Settings</string>

    <!-- Route items -->
    <string name="time_interval">%1$s – %2$s</string>
    <string name="minutes_unit">min</string>
    <string name="duration_hours_minutes">%1$d h %2$d min</string>
    <string name="duration_minutes">%1$d min</string>
    <string name="distance_km">%1$s km</string>
    <string name="distance_m">%1$d m</string>
    <string name="walking_info">%1$s (%2$s) walking</string>
    <string name="every_x">Every %1$s</string>
    <string name="not_all_preferences_met">Not all your preferences could be met</string>
    <plurals name="transfers">
        <item quantity="one">%1$d transfer</item>
        <item quantity="other">%1$d transfers</item>
    </plurals>

    <!-- Routes view -->
    <string name="earlier">Earlier</string>
    <string name="later">Later</string>
    <string name="sort_routes">Sort routes</string>
    <string name="sort_by_arrival_time">Sort by Arrival Time</string>
    <string name="sort_by_departure_time">Sort by Departure Time</string>
    <string name="sort_by_trip_duration">Sort by Trip Duration</string>
    <string name="depart_at">Depart at %1$s</string>
    <string name="arrive_at">Arrive at %1$s</string>
    <string name="depart_now">Depart now</string>

    <!-- Route description view -->
    <string name="route_details">Route description</string>
    <plurals name="stops_and_time">
        <item quantity="one">%1$d stop (%2$s)</item>
        <item quantity="other">%1$d stops (%2$s)</item>
    </plurals>
    <string name="platform_no">Platform %1$s</string>
    <string name="agency_info">Agency Info</string>
    <string name="towards_location">towards %1$s</string>
    <string name="stay_on_same_vehicle">Continue on the same vehicle</string>
    <string name="walk">Walk</string>

    <!-- Settings view -->
    <string name="public_transport">Public transport</string>
    <string name="date_time">Date &amp; time</string>
    <string name="depart">Depart</string>
    <string name="arrive">Arrive</string>
    <string name="last">Last</string>
    <string name="now">Now</string>
    <string name="general">General</string>
    <string name="travel_mode">Travel mode</string>
    <string name="best_route">Best route</string>
    <string name="less_walking">Less walking</string>
    <string name="fewer_transfers">Fewer transfers</string>
    <string name="min_transfer_time">Min transfer time</string>
    <string name="minutes_format">%1$d min</string>
    <string name="preferred_means_of_transport">Preferred means of transport</string>
    <string name="preferred_accessibility">Preferred accessibility</string>
    <string name="bus">Bus</string>
    <string name="underground">Underground</string>
    <string name="railway">Railway</string>
    <string name="tram">Tram</string>
    <string name="ferry">Ferry</string>
    <string name="other">Other</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="bicycle">Bicycle</string>

    <!-- Accessibility -->
    <string name="back">Back</string>
    <string name="transit_segment_icon">Transit segment</string>
    <string name="walk_instruction_icon">Walk instruction</string>
</resources>
